# IPTV-2024

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend-next/: .env  docker-compose.yml  package.json
backend-next/prisma/: schema.prisma
backend-next/src/: middleware.ts
backend-next/src/lib/: auth.ts  errors.ts  logger.ts
backend/api/: deps.py
backend/api/routes/: auth.py  subscriptions.py  users.py
backend/core/: config.py  security.py
backend/db/: base.py  models.py
backend/migrations/: env.py
backend/schemas/: user.py
src/: App.tsx  constants.ts  index.css  main.tsx
src/components/: AuthModal.tsx  BalanceManager.tsx  ChannelList.tsx  ContinueWatching.tsx  EPGModal.tsx  ErrorToast.tsx  FavoriteChannels.tsx  FavoritesModal.tsx  Footer.tsx  LanguageSwitcher.tsx  Navbar.tsx  PlaylistDownloader.tsx  PrivateRoute.tsx  RecentlyWatched.tsx  ReferralSystem.tsx  SettingsModal.tsx  SubscriptionManager.tsx  VideoPlayer.tsx  WatchHistoryModal.tsx
src/constants/: index.ts
src/contexts/: AuthContext.tsx
src/hooks/: useChannelManager.ts  useChannelPreload.ts  useChannels.ts  useFavorites.ts  useHistory.ts  usePlayer.ts  useSubscription.ts
src/lib/api/: auth.ts  (+3 more)
src/mocks/: data.ts
src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Pricing.tsx  Register.tsx  Watch.tsx
src/server/: index.ts
src/types/: channel.ts  index.ts
src/utils/: index.ts  playlist.ts
(+70 files in other folders)
